# zippy-research

./: Dockerfile  README.md  pyproject.toml
notebooks/: component_maps.ipynb
notebooks/.ipynb_checkpoints/: component_maps-checkpoint.ipynb
src/zippy/: f_a.py  point.py  utils.py
tests/: test_component_maps.py
zippy/: f_a.py  point.py  utils.py
