[project]
name = "zipp-research"
version = "0.1.0"
description = "We aim to implement The Zipper Algorithm, an elementary procedure to develop a conformal map between particular regions, in such a way to minimize error."
authors = [
    {name = "Lucy",email = "lmalmud2@jh.edu"}
]
license = {text = "proprietary"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)"
]

[[tool.poetry.packages]]
include = "zippy"
from = "src"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
jupyterlab = "^4.4.3"
ipykernel = "^6.29.5"

